trying to commit

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
         <small>
           &copy; <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time> by Richard Careaga. All rights reserved.
         </small>
-        <a href="https://technocrat.github.io/about><img src="https://careaga.s3.amazonaws.com/technocrat.png" alt="logo" /></a>
+        <a href="https://technocrat.github.io/about><img src="https://careaga.s3.amazonaws.com/technocrat.png" alt="technocrat logo" /></a>
       </footer>
     </div>
   </body>
